--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,8 @@
 body {
+  background-color: var(--medium-shade);
+  color: antiquewhite;
   margin: 0;
+  font-size: calc(2vh);  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
