beginning to setup the shop, visually

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,32 +1,17 @@
-.App {
-  text-align: center;
+html, body {
+  overflow-x: hidden; /* optional */
+  height: 100%;
+}
+::-webkit-scrollbar {
+  background: var(--darker-bg);
+  width:0px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--hover-color);
+  border-radius: 100px;
+  width: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--medium-shade);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  width: 100%;
-  top: 0;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
