--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,3 @@
-* {
-    overflow-x: hidden;
-}
 .btn-1 {
     display: flex;
     justify-content: center;
@@ -18,48 +15,42 @@
 }
 .btn-1:hover {
     background-color: antiquewhite;
-    color: #545C8C;
+    color: var(--hover-color);
 }
 
 
 
-.sec-1 {
-    display: flex;
+.image-wrap {
     width: 100vw;
+    position: relative;
+    display: inline-block;
+    height: 50rem;
 }
-.sec1 {
+.image-wrap img {
+    width: 100%;
+    height: 100%;
+    filter: brightness(50%);
+    position: relative;
+    object-fit: cover;
+    object-position: 100% 75%;
+    vertical-align: bottom;
+}
+.image-text {
+    top: 175px;
     width: 100%;
     display: flex;
-    height: 90vh;
-    justify-content:center;
-    align-items: center;
-    overflow: hidden;
-}
-.sec1 div.background-image {
-    width: 100vw;
-}
-.background-image img {
-    overflow: hidden;
-    width: 100%;
-    filter: brightness(60%);
-}
-.sec1 div:nth-child(2) {
     position: absolute;
-    display: flex;
-    padding: 10px 0;
     flex-direction:  column;
     align-items: center;
     justify-content: center;
-    width: 720px;
     color: antiquewhite;
-    font-size: 1.8vh;
-    margin-right: 20px;
+    font-size: 0.8rem;
 }
-.sec1 div:nth-child(2) h1{
-    font-size: 4em;
+.image-wrap .image-text h1{
+    font-size: 3em;
     overflow: hidden;
 }
-.sec1 div:nth-child(2) h3{
+.image-wrap .image-text h3{
     padding: 20px 0;
     font-size: 1.3rem;
     overflow: hidden;
@@ -68,11 +59,16 @@
     margin-bottom: 15px;
 }
 
-.sec1 #poznajNas {
+.image-wrap #poznajNas {
     font-size: 15px;
 }
 
 @media only screen and (max-width: 1000px) {
+    .image-wrap img {
+        filter: brightness(50%);
+        object-position: 35% 75%;
+        vertical-align: bottom;
+    }
     .sec-1 {
         background-image: url(kawusiabody.jpg);
         background-position-x: min(550px,57%);
@@ -83,41 +79,6 @@
     .background-image img {
         display: none;
     }
-    .sec1{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 50rem;
-    }
-    .sec1 div:nth-child(1){
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 15rem;
-        font-size: 10rem;
-    }
-    .sec1 div:nth-child(1) > button{
-        max-width: 200px;
-        width: 100%;
-        flex-shrink: 0;
-    }
-    .sec1 div:nth-child(1) > h1{
-        font-size: 40px !important;
-        display: flex;
-        justify-content: center;
-    }
-    .sec1 div:nth-child(1) > h3{
-        font-size: 1em;
-        align-items: center;
-        text-align: center;
-    }
-    .sec1 div:nth-child(2) {
-        display:flex;
-    }
-    .sec1 div:nth-child(2) img {
-        display: none;
-    }
 }
 
 
@@ -125,7 +86,6 @@
 
 .sec-4 {
     background-color: var(--header-footer-bg);
-    padding: 20px 0 100px;
     
 }
 .sec4 {
@@ -208,7 +168,7 @@
     justify-content: center;
 }
 .sec5 {
-    background-color: rgb(9, 10, 43);
+    background-color: var(--darker-bg);
     width: 100%;
     height: auto;
     padding: 11em 200px;
