--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -2,20 +2,21 @@
     display: flex;
     flex-direction: column;
     padding: 30px;
-    gap: 20px;
-    background-color: var(--medium-shade);
 }
 
 .classic-menu, .addition-menu, .special-menu, .summer-menu, .tea-menu {
-    padding: 20px 80px 20px 40px;
+    padding: 20px 2em;
     background-color: var(--darker-bg);
     border-radius: 10px;
-    margin: 10px 0;
+    margin: 5px 0;
 }
 
-.menu-container2 div:nth-child(2), div:nth-child(4) {
-    padding-inline-start: 40px;
+.menu-container2 div:nth-child(2), .menu-container2 div:nth-child(4) {
     background-color: var(--header-footer-bg);
+}
+
+.menu-container2 div:nth-child(2) > ul, .menu-container2 div:nth-child(4) > ul{
+    background-color: var(--darker-bg);
 }
 
 .item-header {
@@ -25,12 +26,14 @@
 }
 
 .menu-container2 div ul {
+    padding: 10px;
+    display: flex;
     max-height: 0;
     opacity: 0;
-    transition: max-height 0ms 0ms, opacity 500ms 0ms;
 }
 
 .menu-container2 div ul.menu-active {
+    display: block;
     max-height: 1000px;
     opacity: 1;
     transition: max-height 0ms 0ms, opacity 1500ms 0ms;
@@ -44,6 +47,10 @@
     position: relative;
     padding-bottom: 4px;
     margin: 10px 0;
+}
+
+.menu-list {
+    padding-inline-start: 0;
 }
 
 .menu-list li:nth-child(1) {
