--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@ body {
   background-color: var(--medium-shade);
   color: antiquewhite;
   margin: 0;
-  font-size: calc(2vh);  
+  font-size: 1.2rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
