menu fixed, refactored + home screen and about adjusted

--- a/src/assets/styles/_colors.css
+++ b/src/assets/styles/_colors.css
@@ -7,5 +7,7 @@
     --light-shade: #9298cd;
     --lighter-shade: #b3b8ee;
     --lightest-shade: #d4d9ff;
+    --grey-fit: #a1a8d7;
     --font-color: antiquewhite;
+    --svg-lighter-background: ;
 }
