--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -24,7 +24,7 @@
     width: 100vw;
     position: relative;
     display: inline-block;
-    height: 50rem;
+    height: 45rem;
 }
 .image-wrap img {
     width: 100%;
@@ -36,7 +36,7 @@
     vertical-align: bottom;
 }
 .image-text {
-    top: 175px;
+    top: 10rem;
     width: 100%;
     display: flex;
     position: absolute;
@@ -84,35 +84,43 @@
 
 
 
-.sec-4 {
-    background-color: var(--header-footer-bg);
-    
-}
 .sec4 {
     display: flex;
     justify-content: center;
     align-items: center;
     color: antiquewhite;
     flex-direction: column;
-    transition: all 0.3s ease-in;
+    padding: 1rem 0;
 }
+
+.sec4 > h1 {
+    margin: 0;
+}
+
 .sec4div {
-    width: 90vw;
-    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 80vw;
+    padding: 1rem 0;
     transition: all 0.3s ease-in;
 }
 .qns {
-    width: 100%;
-    background-color: var(--hover-color);
+    cursor: pointer;
+    backdrop-filter: brightness(60%);
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
     margin-top: 10px;
+    align-items: center;
+    padding: 1rem 2rem;
     transition: all 0.3s ease-in;
 }
-.qns div:nth-child(1) {
-    padding: 10px 20px;
+
+.qns div {
+    width: 90%;
 }
+
 .qns div h4 {
     line-height: 30px;
     font-size: 1rem;
@@ -124,38 +132,32 @@
     line-height: 17px;
     font-size: 0.8rem;
 }
-.qns .add {
-    background-color: #444655;
+.add {
+    display: flex;
     align-items: center;
     justify-content: center;
-    display: flex;
-    padding: 0 40px;
+    width: 5rem;
+    padding: 0;
     font-size: 1.2rem;
     cursor: pointer;
     transition: 0.1s;
 }
-.fa-minus {
-    padding-right: 10px;
+
+.qns:hover {
+    backdrop-filter: brightness(45%);
 }
-.add.none {
-    background-color: transparent;
-    height: 60px;
-}
-.hide {
+
+.content-active-not {
     display: none;
 }
-.fa-plus.hide {
-    display: none;
+
+.content-active {
+    display: flex;
 }
-.fa-minus.hide {
-    display: none;
-}
-.show {
-    display: block;
-}
+
 @media only screen and (max-width: 1000px) {
     .sec4 {
-        margin-bottom: 80px;
+        display: flex;
     }
 }
 
@@ -168,10 +170,10 @@
     justify-content: center;
 }
 .sec5 {
-    background-color: var(--darker-bg);
+    backdrop-filter: brightness(50%);
     width: 100%;
+    padding: 5rem;
     height: auto;
-    padding: 11em 200px;
     color: antiquewhite;
 }
 .sec5 h1 {
@@ -231,6 +233,7 @@
     color: rgb(193, 196, 212);
 }
 .sec5 .btn-1 {
+    font-size: 1rem;
     margin-top: 20px;
     color: antiquewhite;
     border: 1px solid antiquewhite;
