--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -4,25 +4,30 @@
     padding: 30px;
 }
 
-.classic-menu, .addition-menu, .special-menu, .summer-menu, .tea-menu {
-    padding: 20px 2em;
-    background-color: var(--darker-bg);
+.classic-menu, .subs-menu, .special-menu, .summer-menu, .tea-menu {
+    padding: 10px 2em;
+    backdrop-filter: blur(3px) brightness(70%);
     border-radius: 10px;
-    margin: 5px 0;
+    margin: 30px 0;
+}
+
+.classic-menu:hover, .subs-menu:hover, .special-menu:hover, .summer-menu:hover, .tea-menu:hover {
+    backdrop-filter: blur(3px) brightness(60%);
+    cursor: pointer;
 }
 
 .menu-container2 div:nth-child(2), .menu-container2 div:nth-child(4) {
-    background-color: var(--header-footer-bg);
+    backdrop-filter: blur(3px) brightness(50%);
 }
-
-.menu-container2 div:nth-child(2) > ul, .menu-container2 div:nth-child(4) > ul{
-    background-color: var(--darker-bg);
+.menu-container2 div:nth-child(2):hover, .menu-container2 div:nth-child(4):hover {
+    backdrop-filter: blur(3px) brightness(40%);
 }
 
 .item-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-size: 1rem;
 }
 
 .menu-container2 div ul {
@@ -47,6 +52,7 @@
     position: relative;
     padding-bottom: 4px;
     margin: 10px 0;
+    cursor: pointer;
 }
 
 .menu-list {
@@ -77,23 +83,27 @@
     height: 15px;
 }
 
-.menu-price {
-    flex-shrink: 0;
-}
-
 button {
     font-size: 40px;
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: center;
     overflow: hidden;
-    color: var(--font-color);
-    background-color: var(--medium-shade);
-    height: 50px;
-    width: 50px;
-    border-radius: 100%;
+    height: 70px;
+    width: 100px;
+    color: antiquewhite;
+    background: transparent;
+    border: none;
 }
 
-button:hover {
-    background-color: var(--hover-color);
+.item-header > button:hover {
+    backdrop-filter: brightness(50%);
+}
+
+@media(max-width:1000px) {
+    .item-header > button {
+        height: 60px;
+        width: 75px;
+    }
 }
