--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -48,10 +48,36 @@
     justify-content: space-evenly;
 }
 
-.redirectButtons ul {
+.redirectButtons > ul {
     display: flex;
     padding-inline-start: 0;
     margin: 0.5rem;
+}
+
+div.logo-visible {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 5rem;
+    margin-top: 0.3rem;
+    height: 100%;
+    width: auto;
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
+div.logo-hidden {
+    opacity: 0;
+    width: 0;
+}
+
+div.logo-hidden > a {
+    pointer-events: none;
+}
+
+.navigation-logo {
+    width: 100px;
+    height: 30px;
 }
 
 .redirectButtons.navActive {
@@ -125,7 +151,7 @@ ul {
     height: 100vh;
     width: 100vw;
     z-index: 19;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px) brightness(70%);
     display: none;
     align-items: center;
     justify-content: center;
@@ -172,9 +198,9 @@ ul {
 
 
 @media(max-width:1000px){
-.social-links {
-    display: none;
-}
+    .social-links {
+        display: none;
+    }
     .headContainer {
         position: sticky;
         top: 0px;
