--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -1,29 +1,226 @@
-.grid-products-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 5rem;
-    padding: 1rem;
-    width: 10rem;
+/*---------------------- Navigation Section ----------------------*/
+nav {
+    display: flex;
+    position: sticky;
+    top: 4rem;
+    backdrop-filter: blur(5px) brightness(80%);
+    border-bottom: 1.2px solid antiquewhite;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.75rem 1.25rem;
+    z-index: 2;
 }
 
-.shop-item {
-    width: 17rem;
-    height: 30rem;
-    background-color: var(--darker-bg);
-    box-shadow: 5px 5px 5px rgb(53, 53, 53);
+.search-right {
+    width: 100%;
+    padding-left: 17.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
 
-.image-container {
+.nav-container {
+    left: 0;
 }
 
-.other-traits {
+input::placeholder {
+    color: rgb(211, 209, 206);
+}
+
+.profile-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.nav-icons {
+    width: 1.5rem;
+    height: 1.5rem;
+    color: antiquewhite;
+}
+
+
+@media(max-width:1000px) {
+    nav {
+        top: 6.7rem;
+    }
+}
+
+
+/*---------------------- Product Section ----------------------*/
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 18.9rem;
+    margin-top: 2rem;
+    z-index: -2;
+}
+
+.card {
+    backdrop-filter: brightness(85%) blur(5px);
+    max-width: 300px;
+    margin: 1.5rem;
+    padding: 1.5rem;
+    cursor: pointer;
+    box-shadow: 2px 2px 5px var(--darker-bg);
+    transition: all 0.2s ease-in-out;
+}
+
+.card:hover {
+    backdrop-filter: brightness(80%);
+    transform: scaleX(102%) scaleY(102%);
+}
+
+.card-image {
+    width: 13rem;
+    margin-bottom: 1rem;
+}
+
+.card-title {
+    margin-bottom: 1rem;
+}
+
+.card-reviews {
+    margin-bottom: 1rem;
+    display: flex;
+}
+
+.rating-stars {
+    color: bisque;
+}
+
+.total-reviews {
+    font-size: 0.9rem;
+    margin-left: 10px;
+}
+
+.card-price {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-icon {
+    color: antiquewhite;
+}
+
+
+/*---------------------- Recommended Section ----------------------*/
+.recommended-flex {
+    display: flex;
+    margin-left: 20rem;
+    gap: 0.5rem;
+}
+
+.recommended-title {
+    margin: 1.25rem 0 1.25rem 20rem;
+    font-size: 1.25rem
+}
+
+.rec-btn {
+    color: antiquewhite;
+    padding: 1rem 2rem;
+    margin-right: 6px;
+    background: transparent;
+    border: none;
+    backdrop-filter: blur(5px) brightness(90%);
+    cursor: pointer;
+}
+
+.rec-btn:hover {
+    backdrop-filter: brightness(80%);
+}
+
+
+/*---------------------- Sidebar Section ----------------------*/
+.shopSidebar-title {
+    font-size: 1rem;
+    font-weight: normal;
+    margin-bottom: 1rem;
+}
+
+.shopSidebar {
+    padding: 0;
+    margin: 0;
+    width: 15%;
+    position: fixed;
+    top: 0;
+    left: 2rem;
+    height: 100%;
+    z-index: 3;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 2rem;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
-.item-image {
-    width: 100%;
-    height: 20rem;
+
+/*---------------------- Category Section ----------------------*/
+.categoryDiv {
+    display: block;
 }
+
+.shopSidebar-cat-title {
+    font-size: 1.3rem;
+    font-weight: normal;
+}
+
+.shopSidebar-items {
+    width: 7rem;
+}
+
+.shopSidebar-label-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+    left: 0;
+    margin-bottom: 0.5rem;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.shopSidebar-label-container > input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.checkmark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1rem;
+    height: 1rem;
+    width: 1rem;
+    background-color: antiquewhite;
+    border-radius: 50%;
+}
+
+.category-input {
+    width: 100%;
+}
+
+.shopSidebar-label-container:hover > input ~.checkmark {
+    background-color: rgb(192, 191, 190);
+}
+
+.shopSidebar-label-container > input:checked ~.checkmark {
+    background-color: var(--darker-bg);
+}
+
+.checkmark::after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.shopSidebar-label-container > input:checked ~ .checkmark::after {
+    display: block;
+}
+
+
+/*---------------------- Price Section ----------------------*/
