--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,7 +40,6 @@ input {
     margin-right: 1.2rem;
     border-radius: 5px;
     position: relative;
-    width: 14rem;
     font-size: 1.2rem;
 }
 
@@ -49,4 +48,7 @@ input {
     overflow-x: hidden;
     height: 100%;
 }
+  div #root {
+    min-height: 100vw;
+  }
 }
