--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -4,13 +4,22 @@
     padding: 30px;
 }
 
+.menu-container2 {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 .classic-menu, .subs-menu, .special-menu, .summer-menu, .tea-menu {
     padding: 10px 2em;
     backdrop-filter: blur(5px) brightness(85%);
-    border-radius: 10px;
-    margin: 30px 0;
-    box-shadow: 2px 3px 3px var(--darker-bg);
+    margin: 20px 0;
+    box-shadow: 3px 5px 7px var(--darker-bg);
     transition: transform 0.1s ease-in-out;
+    max-width: 30rem;
+    min-width: 20rem;
 }
 
 .classic-menu:hover, .subs-menu:hover, .special-menu:hover, .summer-menu:hover, .tea-menu:hover {
@@ -38,13 +47,19 @@
     display: flex;
     max-height: 0;
     opacity: 0;
+    visibility: 0;
 }
 
 .menu-container2 div ul.menu-active {
     display: block;
     max-height: 1000px;
     opacity: 1;
+    visibility: 1;
     transition: max-height 0ms 0ms, opacity 1500ms 0ms;
+}
+
+.menu-active > .menu-item {
+    width: 100%;
 }
 
 .menu-item {
@@ -56,6 +71,7 @@
     padding-bottom: 4px;
     margin: 10px 0;
     cursor: pointer;
+    width: 0;
 }
 
 .menu-list {
